# MedCalc

./: .dockerignore  .gitignore  APIRouter.py  README.md  docker-compose.yaml  main.py  nginx.conf
backend/: APIRouter.py  Dockerfile  main.py  medical.db  pyproject.toml
backend/db/: database.py
backend/models/: bmi_record.py
backend/router/: calculator_router.py  stats_router.py
backend/schema/request/: bmi_request_schema.py  perfect_weight_request_schema.py  tdee_request_schema.py
backend/schema/response/: city_stats_schema.py  response_schema.py  stats_response_schema.py
backend/service/: calculator_service.py  stats_service.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/http/: api.js
frontend/src/pages/: BMICalculator.jsx  Statistics.jsx
frontend/src/styles/: BMICalculator.css  Statistics.css
router/: calculator_router.py
schema/request/: bmr_request_schema.py  smoking_index_request_schema.py
schema/response/: response_schema.py
service/: calculator_service.py
